--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,11 @@
-#spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+# spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
+# spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/dscommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_commerce
 spring.datasource.username=postgres
-spring.datasource.password=0123456789
+spring.datasource.password=1234
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
