--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.profiles.active=test
-#spring.profiles.active=${APP_PROFILE:dev}
+# spring.profiles.active=test
+# spring.profiles.active=${APP_PROFILE:test}
+spring.profiles.active=${APP_PROFILE:dev}
+#spring.profiles.active=${APP_PROFILE:prod}
+
 spring.jpa.open-in-view=false
 
 security.client-id=${CLIENT_ID:myclientid}
