--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # spring.profiles.active=test
 # spring.profiles.active=${APP_PROFILE:test}
-spring.profiles.active=${APP_PROFILE:dev}
-#spring.profiles.active=${APP_PROFILE:prod}
+# spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE:prod}
 
 spring.jpa.open-in-view=false
 
@@ -11,3 +11,5 @@ security.client-secret=${CLIENT_SECRET:myclientsecret}
 security.jwt.duration=${JWT_DURATION:86400}
 
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080,http://hoppscotch.io}
+
+
