feat: database init mode always + data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,12 @@ spring.jpa.open-in-view=false
 
 security.client-id=${CLIENT_ID:myclientid}
 security.client-secret=${CLIENT_SECRET:myclientsecret}
-
 security.jwt.duration=${JWT_DURATION:86400}
 
+# popular o banco de dado com o arquivo data.sql quando iniciar o app
+spring.datasource.initialization-mode=always
+
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080,http://hoppscotch.io}
+
 
 
